@@ -11,6 +11,7 @@
     "node_modules",
     "/lib/opentelemetry-bridge/opentelemetry-core-mini",
     "/test/babel/out.js",
+    "/test/lambda/fixtures/esbuild-bundled-handler/hello.js",
     "/test/sourcemaps/fixtures/lib",
     "/test/stacktraces/fixtures/dist",
     "/test/types/transpile/index.js",
