@@ -1,5 +1,5 @@
 apm-agent-nodejs
-Copyright 2011-2021 Elasticsearch B.V.
+Copyright 2011-2022 Elasticsearch B.V.
 
 # Notice
 
@@ -137,6 +137,40 @@ code in `@opentelemetry/core`.
 The MIT License (MIT)
 
 Copyright (c) 2017 Espen Hovlandsdal
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+
+## esbuild
+
+A small part of esbuild's runtime JS code is used in this project's
+"lib/propwrap.js" module.
+
+- **path:** [lib/propwrap.js](lib/propwrap.js)
+- **author:** Evan Wallace
+- **project url:** https://github.com/evanw/esbuild
+- **original file:** https://github.com/evanw/esbuild/blob/v0.14.42/internal/runtime/runtime.go
+- **license:** MIT License (MIT), http://opensource.org/licenses/MIT
+
+MIT License
+
+Copyright (c) 2020 Evan Wallace
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
