@@ -1,6 +1,8 @@
 'use strict'
-const { getLambdaHandlerInfo, wrapNestedPath } = require('../../lambda')
+
 const Instrumentation = require('../index')
+const { getLambdaHandlerInfo } = require('../../lambda')
+const propwrap = require('../../propwrap')
 
 module.exports = function (module, agent, { version, enabled }) {
   if (!enabled) {
@@ -8,6 +10,13 @@ module.exports = function (module, agent, { version, enabled }) {
   }
 
   const { field } = getLambdaHandlerInfo(process.env, Instrumentation.modules, agent.logger)
-  wrapNestedPath(agent, field, module)
-  return module
+  try {
+    const newMod = propwrap.wrap(module, field, (orig) => {
+      return agent.lambda(orig)
+    })
+    return newMod
+  } catch (wrapErr) {
+    agent.logger.warn('could not wrap lambda handler: %s', wrapErr)
+    return module
+  }
 }
