@@ -500,25 +500,6 @@ function getLambdaHandlerInfo (env, modules, logger) {
   }
 }
 
-// wraps a nested property on the module object with the lambda handler
-// @param string field ex. "foo.baz.bar"
-// @param object module
-function wrapNestedPath (agent, field, module) {
-  const parts = field.split('.')
-  let object = module
-  while (parts.length > 0) {
-    const prop = parts.shift()
-    if (parts.length === 0 && object[prop]) {
-      object[prop] = agent.lambda(object[prop])
-    } else {
-      object = object[prop]
-    }
-    if (!object) {
-      break
-    }
-  }
-}
-
 function lowerCaseObjectKeys (obj) {
   const lowerCased = {}
   for (const key of Object.keys(obj)) {
@@ -604,6 +585,5 @@ function spanLinksFromSnsRecords (records) {
 module.exports = {
   isLambdaExecutionEnvironment,
   elasticApmAwsLambda,
-  getLambdaHandlerInfo,
-  wrapNestedPath
+  getLambdaHandlerInfo
 }
