@@ -1,0 +1,2 @@
+hello.js: hello.ts
+	npx esbuild@0.14.42 hello.ts --platform=node --bundle --outfile=hello.js
