@@ -1,0 +1,6 @@
+This is directory holds the result of using `esbuild` to bundled a TypeScript
+lambda handler -- as is done by a handler built using Serverless Framework
+and TypeScript.
+    https://esbuild.github.io/getting-started/#bundling-for-node
+
+"hello.js" can be rebuilt from "hello.ts" by running `make` in this directory.
