@@ -1,0 +1,3 @@
+export const main = async (event, context) => {
+  return 'hi'
+}
